--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,17 +12,21 @@ python-dotenv = "*"
 flask = "*"
 pymongo = "*"
 
-pyyaml="6.0.1"
-spotipy="2.23.0"
-langchain="0.0.315"
-colorama="0.4.6"
-tiktoken="0.5.1"
-openai="0.28.1"
+pyyaml="*"
+spotipy="*"
+langchain="*"
+langchain-community="*"
+langchain-openai="*"
+colorama="*"
+tiktoken="*"
+openai="*"
+pymysql="*"
 flask_migrate="*"
 opencage="*"
 gunicorn="*"
-pymysql="*"
 sqlalchemy="*"
+tidb-vector="*"
+embedchain="*"
 
 exceptiongroup = "*"
 async-timeout = "*"
