--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,7 +7,7 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<=3.13"
 python-dotenv = "*"
 flask = "*"
 pymongo = "*"
@@ -26,7 +26,7 @@ opencage="*"
 gunicorn="*"
 sqlalchemy="*"
 tidb-vector="*"
-embedchain="*"
+embedchain="0.1.120"
 
 exceptiongroup = "*"
 async-timeout = "*"
